# riptide_descriptions

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: puddles.yaml  tempest.yaml  titan.yaml
meshes/: claw_inside.dae  claw_outside.dae  puddles_collision.dae  puddles_visual.dae
robots/: puddles.urdf  puddles.xacro  tempest.xacro  titan.xacro
sdf/: tempest.sdf
urdf/: robot.gazebo.xacro  robot_actuators.xacro  robot_base.xacro  robot_sensors.xacro  snippets.xacro
