<?xml version="1.0"?>
<package format="2">
  <name>riptide_descriptions</name>
  <version>0.0.1</version>
  <description>The robot description files for UWRT vehicles</description>

  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>

</package>
