<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_descriptions2</name>
  <version>0.0.2</version>
  <description>The robot description files for UWRT vehicles</description>

  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide_gazebo</url>

  <exec_depend>xacro</exec_depend>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
